@@ -1,7 +1,7 @@
 buildscript {
     ext {
         group "ksbysample"
-        version "2.2.7-RELEASE"
+        version "2.4.10"
     }
     repositories {
         mavenCentral()
@@ -15,21 +15,19 @@ buildscript {
 
 plugins {
     id "java"
+    id "groovy"
     id "eclipse"
     id "idea"
-    id "org.springframework.boot" version "2.2.7.RELEASE"
-    id "io.spring.dependency-management" version "1.0.9.RELEASE"
-    id "groovy"
+    id "org.springframework.boot" version "2.4.10"
+    id "io.spring.dependency-management" version "1.0.11.RELEASE"
     id "net.ltgt.errorprone" version "1.1.1"
     id "checkstyle"
     id "com.github.spotbugs" version "4.0.8"
     id "pmd"
     id "com.github.node-gradle.node" version "3.1.1"
-    id "com.gorylenko.gradle-git-properties" version "2.2.2"
-// Gradle 5.3 で internal API が変更されて gradle-processes が動かなくなったのでコメントアウトする
-//    id "com.github.johnrengelman.processes" version "0.5.0"
+    id "com.gorylenko.gradle-git-properties" version "2.3.1"
     id "com.energizedwork.webdriver-binaries" version "1.4"
-    id "org.seasar.doma.codegen" version "0.0.2"
+    id "org.seasar.doma.codegen" version "1.4.1"
 }
 
 sourceCompatibility = JavaVersion.VERSION_11
@@ -42,18 +40,14 @@ wrapper {
 
 [compileJava, compileTestGroovy, compileTestJava]*.options*.encoding = "UTF-8"
 [compileJava, compileTestGroovy, compileTestJava]*.options*.compilerArgs = ["-Xlint:all,-options,-processing,-path"]
+tasks.withType(JavaCompile).configureEach {
+    options.errorprone {
+        disableWarningsInGeneratedCode = true
+    }
+}
 tasks.named("compileTestJava").configure {
     options.errorprone.enabled = false
 }
-// --add-opens オプションを複数指定するとエラーが出るのでコメントアウトする
-// https://github.com/gradle/gradle/issues/7045
-// のクローズ待ち？
-//compileTestGroovy {
-//    options.forkOptions.jvmArgs += [
-//            "--add-opens", "java.base/java.util=ALL-UNNAMED",
-//            "--add-opens", "java.base/java.lang.annotation=ALL-UNNAMED"
-//    ]
-//}
 
 // for Doma 2
 // Copy the resources referred by the Doma annotation processors to
@@ -131,15 +125,17 @@ dependencyManagement {
         // https://repo.spring.io/release/org/springframework/boot/spring-boot-starter-parent/2.1.4.RELEASE/
         // bomProperty に指定可能な property は以下の URL の BOM に記述がある
         // https://repo.spring.io/release/org/springframework/boot/spring-boot-dependencies/2.1.4.RELEASE/spring-boot-dependencies-2.1.4.RELEASE.pom
-        mavenBom org.springframework.boot.gradle.plugin.SpringBootPlugin.BOM_COORDINATES
-        mavenBom("org.junit:junit-bom:5.6.2")
+        mavenBom(org.springframework.boot.gradle.plugin.SpringBootPlugin.BOM_COORDINATES) {
+            bomProperty "groovy.version", "2.5.15"
+        }
+        mavenBom("org.junit:junit-bom:5.7.2")
     }
 }
 
 dependencies {
     def spockVersion = "1.3-groovy-2.5"
-    def domaVersion = "2.34.0"
-    def lombokVersion = "1.18.12"
+    def lombokVersion = "1.18.20"
+    def domaVersion = "2.49.0"
     def errorproneVersion = "2.3.4"
     def powermockVersion = "2.0.7"
     def seleniumVersion = "3.141.59"
@@ -148,6 +144,7 @@ dependencies {
     // dependency-management-plugin によりバージョン番号が自動で設定されるもの
     // Appendix F. Dependency versions ( https://docs.spring.io/spring-boot/docs/2.1.4.RELEASE/reference/html/appendix-dependency-versions.html ) 参照
     implementation("org.springframework.boot:spring-boot-starter-web")
+    implementation("org.springframework.boot:spring-boot-starter-validation")
     implementation("org.springframework.boot:spring-boot-starter-thymeleaf")
     implementation("org.springframework.boot:spring-boot-starter-data-jpa")
     implementation("org.springframework.boot:spring-boot-starter-freemarker")
@@ -166,17 +163,17 @@ dependencies {
 
     // dependency-management-plugin によりバージョン番号が自動で設定されないもの、あるいは最新バージョンを指定したいもの
     implementation("com.integralblue:log4jdbc-spring-boot-starter:2.0.0")
-    implementation("org.flywaydb:flyway-core:5.2.4")
+    implementation("org.flywaydb:flyway-core:7.14.1")
     implementation("com.h2database:h2:1.4.200")
     implementation("com.github.rozidan:modelmapper-spring-boot-starter:2.3.1")
-    implementation("com.google.guava:guava:27.1-jre")
-    implementation("org.apache.commons:commons-lang3:3.8.1")
-    testImplementation("org.dbunit:dbunit:2.7.0")
-    testImplementation("org.assertj:assertj-core:3.16.0")
+    implementation("com.google.guava:guava:31.0.1-jre")
+    implementation("org.apache.commons:commons-lang3:3.12.0")
+    testImplementation("org.dbunit:dbunit:2.7.2")
+    testImplementation("org.assertj:assertj-core:3.21.0")
     testImplementation("org.spockframework:spock-core:${spockVersion}")
     testImplementation("org.spockframework:spock-spring:${spockVersion}")
-    testImplementation("org.jsoup:jsoup:1.13.1")
-    testImplementation("com.icegreen:greenmail:1.5.13")
+    testImplementation("org.jsoup:jsoup:1.14.3")
+    testImplementation("com.icegreen:greenmail:1.6.5")
 
     // for lombok
     annotationProcessor("org.projectlombok:lombok:${lombokVersion}")
@@ -195,7 +192,7 @@ dependencies {
     testImplementation("org.powermock:powermock-api-mockito2:${powermockVersion}")
 
     // for Geb + Spock
-    testImplementation("org.gebish:geb-spock:3.4") {
+    testImplementation("org.gebish:geb-spock:4.1") {
         exclude group: "org.codehaus.groovy", module: "groovy-all"
     }
     testImplementation("org.seleniumhq.selenium:selenium-chrome-driver:${seleniumVersion}")
@@ -291,31 +288,6 @@ task npmBuild(type: NpmTask) {
 npmBuild.dependsOn npmTest
 processResources.dependsOn npmBuild
 
-// Gradle 5.3 で internal API が変更されて gradle-processes が動かなくなったのでコメントアウトする
-//// for Geb + Spock Integration Test
-//task startServer(type: com.github.jengelman.gradle.plugins.processes.tasks.JavaFork) {
-//    jvmArgs = [
-//            "-Dspring.profiles.active=develop",
-//            "-Dlogging.level.root=OFF",
-//            "-Dlogging.level.org.springframework.web=OFF",
-//            "-Dlogging.level.jdbc.sqlonly=OFF",
-//            "-Dlogging.level.jdbc.sqltiming=OFF",
-//            "-Dlogging.level.jdbc.audit=OFF",
-//            "-Dlogging.level.jdbc.resultset=OFF",
-//            "-Dlogging.level.jdbc.resultsettable=OFF",
-//            "-Dlogging.level.jdbc.connection=OFF"
-//    ]
-//    classpath += sourceSets.main.runtimeClasspath
-//    main = "${mainClass}"
-//    doLast {
-//        Thread.sleep(15000)
-//    }
-//}
-//task stopServer {
-//    doLast {
-//        startServer.processHandle.abort()
-//    }
-//}
 webdriverBinaries {
     chromedriver "94.0.4606.61"
     geckodriver "0.30.0"
@@ -327,9 +299,6 @@ drivers.each { driver ->
         outputs.upToDateWhen { false }
         systemProperty "geb.env", driver
         exclude "ksbysample/**"
-// Gradle 5.3 で internal API が変更されて gradle-processes が動かなくなったのでコメントアウトする
-//        dependsOn startServer
-//        finalizedBy stopServer
 
         testLogging {
             afterSuite printTestCount
